--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-progress-steps": "^1.3.4",
     "react-native-step-indicator": "^1.0.3",
     "react-native-web": "~0.13.12"
