--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-list-view-select": "^1.0.4",
     "react-native-progress-steps": "^1.3.4",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
