--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-list-view-select": "^1.0.4",
     "react-native-progress-steps": "^1.3.4",
+    "react-native-select-list": "^1.0.5",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12"
