--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "axios": "^0.22.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
