--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-list-view-select": "^1.0.4",
+    "react-native-multiple-select": "^0.5.7",
     "react-native-progress-steps": "^1.3.4",
     "react-native-select-dropdown": "^1.1.0",
     "react-native-select-list": "^1.0.5",
