--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/datetimepicker": "^3.5.2",
     "axios": "^0.22.0",
     "expo": "~42.0.1",
+    "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "moment": "^2.29.1",
     "react": "16.13.1",
@@ -19,6 +20,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-native-chart-kit": "^6.11.0",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-list-view-select": "^1.0.4",
     "react-native-multiple-select": "^0.5.7",
     "react-native-progress-steps": "^1.3.4",
